# =============================================================================
# cmake-format: off
# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION.
# SPDX-License-Identifier: Apache-2.0
# cmake-format: on
# =============================================================================

add_subdirectory(quantize/binary)
add_subdirectory(quantize/pq)
add_subdirectory(quantize/scalar)
